--- a/index.html
+++ b/index.html
@@ -150,6 +150,55 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <p> <br> </p>
+                        <p>Jan Korinek Soultet Revue
+                        <br>Prague, CZ
+                        <br>27-12-16</p>
+                        <div class="flickrwrap">
+                            <iframe src="https://www.flickr.com/photos/144872371@N07/31800946792/player/" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <p> <br> </p>
+                        <p>The Organ Grinders at Prague Swing Xmas
+                        <br>Prague, CZ
+                        <br>09-12-16</p>
+                        <div class="flickrwrap">
+                            <iframe src="https://www.flickr.com/photos/missmikeymay/32152650076/player/" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+                        </div>
+                        </div>
+                    </div>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <p> <br> </p>
+                        <p>Stan the Man Blues Night
+                        <br>Dresden, DE
+                        <br>12-11-16</p>
+                        <div class="flickrwrap">
+                            <iframe src="https://www.flickr.com/photos/missmikeymay/32072301701/player/" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <p> <br> </p>
+                        <p>The Organ Grinders at Evergreen
+                        <br>Dresden, DE
+                        <br>21-10-16</p>
+                        <div class="flickrwrap">
+                            <iframe src="https://www.flickr.com/photos/missmikeymay/31379396533/player/" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+                        </div>
+                        </div>
+                    </div>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <p> <br> </p>
+                        <p>'Swing Out the Blues' CD Release Party
+                        <br>Prague, CZ
+                        <br>14-10-16</p>
+                        <div class="flickrwrap">
+                            <iframe src="https://www.flickr.com/photos/missmikeymay/32071043921/player/" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+                        </div>
+                        </div>
+                    <div class="col-lg-6">
+                        <p> <br> </p>
                         <p>Jan Korinek Soultet Swings!
                         <br>Prague, CZ
                         <br>26-07-16</p>
@@ -157,16 +206,7 @@
                             <iframe src="https://www.flickr.com/photos/missmikeymay/31812828730/player/" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
                         </div>
                     </div>
-                    <div class="col-lg-6">
-                        <p> <br> </p>
-                        <p>'Swing Out the Blues' CD Release Party
-                        <br>Prague, CZ
-                        <br>14-10-16</p>
-                        <div class="flickrwrap">
-                        <iframe src="https://www.flickr.com/photos/missmikeymay/32071043921/player/" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-                        </div>
-                        </div>
-                    </div>
+                </div>
             </div>
         </div>
     </section>
