--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <section id="music" class="content-section text-center">
         <div class="content-section">
             <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
+                <div class="col-lg-12">
                     <h2>Music</h2>
                     <a href="https://missmikeymay.bandcamp.com/" class="btn btn-default btn-lg">Buy the album on Bandcamp</a>
                     <p>   </p>
