--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Upcoming Shows</h2>
-                   <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMissMikeyMaySings%2F&tabs=events&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>    
+                    <a href=" https://www.facebook.com/pg/MissMikeyMaySings/events/" class="btn btn-default btn-lg">Check out upcoming shows on my Facebook page</a>
                 </div>
             </div>
         </div>
