--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="container">
                 <div class="col-lg-12">
                     <h2>Music</h2>
-                    <a href="https://missmikeymay.bandcamp.com/" class="btn btn-default btn-lg">Buy the album on Bandcamp</a>
+                    <a href="https://missmikeymay.bandcamp.com/" target="_blank" class="btn btn-default btn-lg">Buy the album on Bandcamp</a>
                     <p>   </p>
                     <iframe style="border: 0; width: 340px; height: 776px;" src="https://bandcamp.com/EmbeddedPlayer/album=2572896376/size=large/bgcol=333333/linkcol=e99708/transparent=true/" seamless><a href="http://missmikeymay.bandcamp.com/album/swing-out-the-blues">Swing Out the Blues by Miss Mikey May and Jan Kořínek with The Organ Grinders</a></iframe>            </div>
             </div>
@@ -217,7 +217,7 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Upcoming Shows</h2>
-                    <a href=" https://www.facebook.com/pg/MissMikeyMaySings/events/" class="btn btn-default btn-lg">Check out upcoming shows on my Facebook page</a>
+                    <a href=" https://www.facebook.com/pg/MissMikeyMaySings/events/" target="_blank" class="btn btn-default btn-lg">Check out upcoming shows on my Facebook page</a>
                 </div>
             </div>
         </div>
@@ -233,13 +233,13 @@
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://www.facebook.com/MissMikeyMaySings/" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
+                        <a href="https://www.facebook.com/MissMikeyMaySings/" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                     </li>
                     <li>
-                        <a href="https://missmikeymay.bandcamp.com/" class="btn btn-default btn-lg"><i class="fa fa-bandcamp fa-fw"></i> <span class="network-name">Bandcamp</span></a>
+                        <a href="https://missmikeymay.bandcamp.com/" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-bandcamp fa-fw"></i> <span class="network-name">Bandcamp</span></a>
                     </li>
                     <li>
-                        <a href="https://www.youtube.com/channel/UC8HN8qQUSZNNCzEyasdjWRg" class="btn btn-default btn-lg"><i class="fa fa-youtube fa-fw"></i> <span class="network-name">YouTube</span></a>
+                        <a href="https://www.youtube.com/channel/UC8HN8qQUSZNNCzEyasdjWRg" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-youtube fa-fw"></i> <span class="network-name">YouTube</span></a>
                     </li>
                 </ul>
             </div>
