--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <a class="page-scroll" href="#photos">Photos</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#shows">Shows</a>
+                        <a class="page-scroll" href="#concerts">Concerts</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -115,8 +115,6 @@
             <div class="container">
                 <div class="col-lg-12">
                     <h2>Music</h2>
-                    <a href="https://missmikeymay.bandcamp.com/" target="_blank" class="btn btn-default btn-lg">Buy the album on Bandcamp</a>
-                    <p>   </p>
                     <iframe style="border: 0; width: 340px; height: 776px;" src="https://bandcamp.com/EmbeddedPlayer/album=2572896376/size=large/bgcol=333333/linkcol=e99708/transparent=true/" seamless><a href="http://missmikeymay.bandcamp.com/album/swing-out-the-blues">Swing Out the Blues by Miss Mikey May and Jan Kořínek with The Organ Grinders</a></iframe>            </div>
             </div>
         </div>
@@ -212,12 +210,12 @@
     </section>
     
     <!-- Events Section -->
-    <section id="shows" class="content-section text-center">
+    <section id="concerts" class="content-section text-center">
         <div class="content-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Upcoming Shows</h2>
-                    <a href=" https://www.facebook.com/pg/MissMikeyMaySings/events/" target="_blank" class="btn btn-default btn-lg">Check out upcoming shows on my Facebook page</a>
+                    <h2>Concerts</h2>
+                    <p>For information about upcoming concerts, festivals, and guest performances on <a href=" https://www.facebook.com/pg/MissMikeyMaySings/events/" target="_blank"> my Facebook page</a>.</p>
                 </div>
             </div>
         </div>
