--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Concerts</h2>
-                    <p>For information about upcoming concerts, festivals, and guest performances on <a href=" https://www.facebook.com/pg/MissMikeyMaySings/events/" target="_blank"> my Facebook page</a>.</p>
+                    <p>For information about upcoming concerts, visit <a href=" https://www.facebook.com/pg/MissMikeyMaySings/events/" target="_blank"> my Facebook page</a>.</p>
                 </div>
             </div>
         </div>
