--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </section>
 
     <!-- Bandcamp Section -->
-    <section id="music" class="content-section text-center">
+    <section id="music" class="container-fluid content-section text-center">
         <div class="content-section">
             <div class="container">
                 <div class="col-lg-12">
@@ -209,7 +209,7 @@
     </section>
     
     <!-- Events Section -->
-    <section id="concerts" class="content-section text-center">
+    <section id="concerts" class="container-fluid content-section text-center">
         <div class="content-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
