--- a/index.html
+++ b/index.html
@@ -207,15 +207,13 @@
             </div>
         </div>
     </section>
-    
-    <!-- Events Section -->
+   
+   <!-- Concerts Section -->
     <section id="concerts" class="container-fluid content-section text-center">
-        <div class="content-section">
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Concerts</h2>
-                    <p>For information about upcoming concerts, visit <a href=" https://www.facebook.com/pg/MissMikeyMaySings/events/" target="_blank"> my Facebook page</a>.</p>
-                </div>
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <h2>Concerts</h2>
+                <p>For information about upcoming concerts, visit <a href=" https://www.facebook.com/pg/MissMikeyMaySings/events/" target="_blank"> my Facebook page</a>.</p>
             </div>
         </div>
     </section>
