--- a/index.html
+++ b/index.html
@@ -151,8 +151,9 @@
                         <br>Prague, CZ
                         <br>27-12-16</p>
                         <div class="flickrwrap">
-                            <iframe src="https://www.flickr.com/photos/144872371@N07/31800946792/player/" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+                            <iframe src="https://www.flickr.com/photos/144872371@N07/31800946792/" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
                         </div>
+                       <p><a href="https://flic.kr/s/aHskQ5viRu" target=_blank>View full album on Flickr</a></p>
                     </div>
                     <div class="col-lg-6">
                         <p> <br> </p>
