--- a/index.html
+++ b/index.html
@@ -153,7 +153,6 @@
                         <div class="flickrwrap">
                             <iframe src="https://www.flickr.com/photos/144872371@N07/31800946792/" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
                         </div>
-                       <p><a href="https://flic.kr/s/aHskQ5viRu" target=_blank>View full album on Flickr</a></p>
                     </div>
                     <div class="col-lg-6">
                         <p> <br> </p>
@@ -161,8 +160,7 @@
                         <br>Prague, CZ
                         <br>09-12-16</p>
                         <div class="flickrwrap">
-                            <iframe src="https://www.flickr.com/photos/missmikeymay/32152650076/in/album-72157677456866850/player/" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-                        </div>
+                          <a data-flickr-embed="true"  href="https://www.flickr.com/photos/missmikeymay/albums/72157677456866850" title="The Organ Grinders at Prague Swing Xmas 09-12-16"><img src="https://c4.staticflickr.com/1/446/31380342363_8c52185c29.jpg" width="500" height="334" alt="The Organ Grinders at Prague Swing Xmas 09-12-16"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                        </div>
                         </div>
                     </div>
                 <div class="row">
