--- a/index.html
+++ b/index.html
@@ -144,24 +144,18 @@
         <div class="container">
             <div class="col-lg-12">
                 <h2>Photos</h2>
+                <p>Flickr Photostream</p>
+                <div class="flickrwrap">
+                    <iframe src="https://www.flickr.com/photos/144872371@N07/31800946792/player/" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+                </div>
                 <div class="row">
-                    <div class="col-lg-6">
-                        <p> <br> </p>
-                        <p>Jan Korinek Soultet Revue
+                   <p>Photo Albums</p>
+                        <p><a href="https://flic.kr/s/aHskRyn8xP" target=_blank>Jan Korinek Soultet Revue</a>
                         <br>Prague, CZ
                         <br>27-12-16</p>
-                        <div class="flickrwrap">
-                            <iframe src="https://www.flickr.com/photos/144872371@N07/31800946792/" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <p> <br> </p>
-                        <p>The Organ Grinders at Prague Swing Xmas
+                        <p><a href="https://flic.kr/s/aHskQ5viRu" target=_blank>The Organ Grinders at Prague Swing Xmas</a>
                         <br>Prague, CZ
                         <br>09-12-16</p>
-                        <div class="flickrwrap">
-                          <a data-flickr-embed="true"  href="https://www.flickr.com/photos/missmikeymay/albums/72157677456866850" title="The Organ Grinders at Prague Swing Xmas 09-12-16"><img src="https://c4.staticflickr.com/1/446/31380342363_8c52185c29.jpg" width="500" height="334" alt="The Organ Grinders at Prague Swing Xmas 09-12-16"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                        </div>
-                        </div>
                     </div>
                 <div class="row">
                     <div class="col-lg-6">
