--- a/index.html
+++ b/index.html
@@ -144,58 +144,30 @@
         <div class="container">
             <div class="col-lg-12">
                 <h2>Photos</h2>
-                <p>Flickr Photostream</p>
                 <div class="flickrwrap">
-                    <iframe src="https://www.flickr.com/photos/144872371@N07/31800946792/player/" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+                    <iframe src="https://www.flickr.com/photos/missmikeymay/32195206965/player/" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
                 </div>
                 <div class="row">
-                   <p>Photo Albums</p>
+                   <p> <br> </p>
+                   <h3>Photo Albums</h3>
                         <p><a href="https://flic.kr/s/aHskRyn8xP" target=_blank>Jan Korinek Soultet Revue</a>
-                        <br>Prague, CZ
-                        <br>27-12-16</p>
+                        <br><i>Prague, CZ
+                           <br>27-12-16</i></p>
                         <p><a href="https://flic.kr/s/aHskQ5viRu" target=_blank>The Organ Grinders at Prague Swing Xmas</a>
-                        <br>Prague, CZ
-                        <br>09-12-16</p>
-                    </div>
-                <div class="row">
-                    <div class="col-lg-6">
-                        <p> <br> </p>
-                        <p>Stan the Man Blues Night
-                        <br>Dresden, DE
-                        <br>12-11-16</p>
-                        <div class="flickrwrap">
-                            <iframe src="https://www.flickr.com/photos/missmikeymay/32072301701/player/" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <p> <br> </p>
-                        <p>The Organ Grinders at Evergreen
-                        <br>Dresden, DE
-                        <br>21-10-16</p>
-                        <div class="flickrwrap">
-                            <iframe src="https://www.flickr.com/photos/missmikeymay/31379396533/player/" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-                        </div>
-                        </div>
-                    </div>
-                <div class="row">
-                    <div class="col-lg-6">
-                        <p> <br> </p>
-                        <p>'Swing Out the Blues' CD Release Party
-                        <br>Prague, CZ
-                        <br>14-10-16</p>
-                        <div class="flickrwrap">
-                            <iframe src="https://www.flickr.com/photos/missmikeymay/32071043921/player/" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-                        </div>
-                        </div>
-                    <div class="col-lg-6">
-                        <p> <br> </p>
-                        <p>Jan Korinek Soultet Swings!
-                        <br>Prague, CZ
-                        <br>26-07-16</p>
-                        <div class="flickrwrap">
-                            <iframe src="https://www.flickr.com/photos/missmikeymay/31812828730/player/" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-                        </div>
-                    </div>
+                        <br><i>Prague, CZ
+                        <br>09-12-16</i></p>
+                        <p><a href="https://flic.kr/s/aHskShWfTx" target=_blank>Stan the Man Blues Night</a>
+                        <br><i>Dresden, DE
+                           <br>12-11-16</i></p>
+                        <p><a href="https://flic.kr/s/aHskLDsydD" target=_blank>The Organ Grinders at Evergreen</a>
+                        <br><i>Dresden, DE
+                        <br>21-10-16</i></p>
+                        <p><a href="https://flic.kr/s/aHskPHhhtH" target=_blank>'Swing Out the Blues' CD Release Party</a>
+                        <br><i>Prague, CZ
+                           <br>14-10-16</i></p>
+                        <p><a href="https://flic.kr/s/aHskLvf7nU" target=_blank>Jan Korinek Soultet Swings!</a>
+                        <br><i>Prague, CZ
+                           <br>26-07-16</i></p>
                 </div>
             </div>
         </div>
