--- a/index.html
+++ b/index.html
@@ -150,25 +150,36 @@
                 <div class="row">
                    <p> <br> </p>
                    <h3>Photo Albums</h3>
+                   <div class="row">
+                      <div class="col-lg-6">
                         <p><a href="https://flic.kr/s/aHskRyn8xP" target=_blank>Jan Korinek Soultet Revue</a>
-                        <br><i>Prague, CZ
-                           <br>27-12-16</i></p>
+                        <br>Prague, CZ
+                           <br>27-12-16</p>
                         <p><a href="https://flic.kr/s/aHskQ5viRu" target=_blank>The Organ Grinders at Prague Swing Xmas</a>
-                        <br><i>Prague, CZ
-                        <br>09-12-16</i></p>
+                        <br>Prague, CZ
+                        <br>09-12-16</p>
+                      </div></div>
+                   <div class="row">
+                      <div class="col-lg-6">
                         <p><a href="https://flic.kr/s/aHskShWfTx" target=_blank>Stan the Man Blues Night</a>
-                        <br><i>Dresden, DE
-                           <br>12-11-16</i></p>
+                        <br>Dresden, DE
+                           <br>12-11-16</p>
                         <p><a href="https://flic.kr/s/aHskLDsydD" target=_blank>The Organ Grinders at Evergreen</a>
-                        <br><i>Dresden, DE
-                        <br>21-10-16</i></p>
+                        <br>Dresden, DE
+                        <br>21-10-16</p>
+                      </div>
+                   </div>
+                   <div class="row">
+                      <div class="col-lg-6">
                         <p><a href="https://flic.kr/s/aHskPHhhtH" target=_blank>'Swing Out the Blues' CD Release Party</a>
-                        <br><i>Prague, CZ
-                           <br>14-10-16</i></p>
+                        <br>Prague, CZ
+                           <br>14-10-16</p>
                         <p><a href="https://flic.kr/s/aHskLvf7nU" target=_blank>Jan Korinek Soultet Swings!</a>
-                        <br><i>Prague, CZ
-                           <br>26-07-16</i></p>
-                </div>
+                        <br>Prague, CZ
+                           <br>26-07-16</p>
+                      </div>
+                   </div>
+               </div>
             </div>
         </div>
     </section>
