--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact</h2>
-                <p>For booking and other inquiries:</p>
-                <p><a href="mailto:music@missmikeymay.com">music@missmikeymay.com</a>
+                <p>For booking and other inquiries:
+                <br><a href="mailto:music@missmikeymay.com">music@missmikeymay.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
