--- a/index.html
+++ b/index.html
@@ -196,8 +196,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact</h2>
                 <p>For booking and other inquiries:
-                <br><a href="mailto:music@missmikeymay.com">music@missmikeymay.com</a>
-                </p>
+                <br><a href="mailto:music@missmikeymay.com">music@missmikeymay.com</a></p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
                         <a href="https://www.facebook.com/MissMikeyMaySings/" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
