--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h2>About</h2>
-                <p>Miss Mikey May is an Israeli-American blues and jazz singer, based in Prague, Czech Republic. Her powerful and soulful vocals are inspired by the great jazz and blues divas and deliver a one-two punch of musicality and emotion that radiates on and off the stage.</p>
+                <p>Miss Mikey May is an Israeli-American blues and jazz singer, based in Prague, Czech Republic. Her powerful and soulful vocals are inspired by the great jazz and blues divas and deliver a double-dose of musicality and emotion that radiate on and off the stage.</p>
                 <p>Mikey grew up on the stage, singing, acting, and dancing throughout her school years. She spent the better part of her twenties performing in rock, jazz, and blues bands, as well as cabaret and burlesque productions. In 2012 she joined the global swing and blues dance communities, traveling and dancing throughout Europe to live swing and blues music. </p>
-                <p>In early 2016, The Organ Grinders project was born from her collaboration with Jan Kořínek, world-class Czech Hammond organ player and band leader. In October 2016, they released the project's debut album, 'Swing Out the Blues', featuring swinging-blues tributes to classic tunes.</p>
+                <p>Shortly after moving to Prague at the end of 2015, The Organ Grinders project was born from her collaboration with Jan Kořínek, world-class Czech Hammond organ player and band leader. In October 2016, the project released their debut album, 'Swing Out the Blues', featuring dancer-friendly swingin' blues tributes to classic tunes.</p>
                 <p>Nowadays, Mikey is a resident musician at U Maleho Glena, Reduta Jazz Club, and Jazz Dock in Prague, as well as at Evergreen Pub in Dresden, Germany. She also collaborates regularly with the Ray Charles Tribute Orchestra, led by Jakub Zomer, and with AppenDixie, led by Petr Seghman.</p>
             </div>
         </div>
