--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i> <span class="light">Miss Mikey May</span>
+                    <i class="fa fa-play-circle"></i> <span class="light"><b>Miss Mikey May</b></span>
                 </a>
             </div>
 
