--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Miss Mikey May 2017</p>
-            <p> </p>
+            <p>Copyright &copy; Miss Mikey May 2017
+            <br></p>
             <p>This website was built with Jekyll and published with GitHub Pages</p>
-            <p>Theme based on the awesome open-source folks at <a href="https://startbootstrap.com/template-overviews/grayscale/">Start Bootstrap Grayscale</a></p>
-            <p> </p>
+            <p>Theme based on the awesome open-source folks at <a href="https://startbootstrap.com/template-overviews/grayscale/">Start Bootstrap Grayscale</a>
+            <br></p>
             <p>Front page photo courtesy of <a href="https://leannekiddorivers.wordpress.com/" target=_blank>Leanne Kiddo Rivers</a></p>
         </div>
     </footer>
