--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <section id="music" class="container-fluid content-section text-center">
         <div class="content-section">
             <div class="container">
-                <div class="col-lg-12">
+                <div class="col-xs-12 col-lg-8 col-lg-offset-2">
                     <h2>Music</h2>
                      <iframe style="border: 0; width: 100%; height: 472px;" src="https://bandcamp.com/EmbeddedPlayer/album=2572896376/size=large/bgcol=333333/linkcol=e99708/artwork=small/transparent=true/" seamless><a href="http://missmikeymay.bandcamp.com/album/swing-out-the-blues">Swing Out the Blues by Miss Mikey May and Jan Kořínek with The Organ Grinders</a></iframe>
                 </div>
