--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
     </section>
 
     <!-- Bandcamp  Section -->
-    <section id="music" class="container-fluid content-section text-center">
-        <div class="content-section">
+    <section id="music" class="container-fluid widget-section text-center">
+        <div class="widget-section">
             <div class="container">
                 <div class="col-xs-12 col-md-8 col-md-offset-2">
                     <h2>Music</h2>
