--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </section>
 
     <!-- YouTube Section -->
-    <section id="videos" class="container-fluid content-section text-center">
+    <section id="videos" class="container-fluid widget-section text-center">
         <div class="container">
             <div class="col-lg-12">
                 <h2>Videos</h2>
@@ -139,7 +139,7 @@
     </section>
 
     <!-- Flickr Section -->
-    <section id="photos" class="container-fluid content-section text-center">
+    <section id="photos" class="container-fluid widget-section text-center">
         <div class="container">
             <div class="col-lg-12">
                 <h2>Photos</h2>
