--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@
     </section>
    
    <!-- Concerts Section -->
-    <section id="concerts" class="container-fluid content-section text-center">
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
+    <section id="concerts" class="container-fluid widget-section text-center">
+        <div class="container">
+            <div class="col-xs-12 col-md-8 col-md-offset-2">
                 <h2>Concerts</h2>
-                <p>For information about upcoming concerts, visit <a href=" https://www.facebook.com/pg/MissMikeyMaySings/events/" target="_blank"> my Facebook page</a>.</p>
+                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMissMikeyMaySings%2F&tabs=events&width=500&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="500" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
             </div>
         </div>
     </section>
