--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <section id="news" class="container-fluid widget-section text-center">
         <div class="container">
             <div class="col-xs-12 col-md-12">
-                <h2>What's New?</h2>
+                <h2>What's New</h2>
                 <div class="col-md-6">
                     <p><br></p>
                     <div class="fb-page" data-href="https://www.facebook.com/MissMikeyMaySings/" data-tabs="timeline" data-width="500" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/MissMikeyMaySings/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/MissMikeyMaySings/">Miss Mikey May</a></blockquote></div>
