--- a/index.html
+++ b/index.html
@@ -118,10 +118,12 @@
                 <h2>What's New</h2>
                 <div class="col-md-6">
                     <p><br></p>
-                    <div class="fb-page" data-href="https://www.facebook.com/MissMikeyMaySings/" data-tabs="timeline" data-width="500" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote cite="https://www.facebook.com/MissMikeyMaySings/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/MissMikeyMaySings/">Miss Mikey May</a></blockquote></div>                </div>
-                <div class="col-md-6">
+                    <div class="fb-page" data-href="https://www.facebook.com/MissMikeyMaySings/" data-tabs="timeline" data-width="500" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/MissMikeyMaySings/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/MissMikeyMaySings/">Miss Mikey May</a></blockquote></div>                
+                    <div class="col-md-6">
                     <p><br></p>
-                    <div class="fb-page" data-href="https://www.facebook.com/MissMikeyMaySings/" data-tabs="events" data-width="500" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/MissMikeyMaySings/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/MissMikeyMaySings/">Miss Mikey May</a></blockquote></div>            </div>
+                    <div class="fb-page" data-href="https://www.facebook.com/MissMikeyMaySings/" data-tabs="events" data-width="500" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/MissMikeyMaySings/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/MissMikeyMaySings/">Miss Mikey May</a></blockquote></div>            
+                    </div>
+                </div>
             </div>
         </div>
     </section>
