--- a/index.html
+++ b/index.html
@@ -155,15 +155,22 @@
             <div class="col-lg-12">
                 <h2>Videos</h2>
                 <div class="row">
-                    <div class="col-lg-6">
-                    <div class="video-container">
-                    <iframe width="640" height="360" src="https://www.youtube.com/embed/FmL9Cf9Zbs4?rel=0" frameborder="0" allowfullscreen></iframe>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                    <div class="video-container">
-                    <iframe width="640" height="360" src="https://www.youtube.com/embed/LQBcaGpyKlI?rel=0" frameborder="0" allowfullscreen></iframe>            </div>
-                    </div>
+                <div class="col-lg-6">
+                   <div class="video-container">
+                      <iframe width="640" height="360" src="https://www.youtube.com/embed/FmL9Cf9Zbs4?rel=0" frameborder="0" allowfullscreen></iframe>
+                   </div>
+                   <div class="video-container">
+                      <iframe width="640" height="360" src="https://www.youtube.com/embed/LQBcaGpyKlI?rel=0" frameborder="0" allowfullscreen></iframe>            
+                   </div>
+                   </div>
+                </div>
+                <div class="col-lg-6">
+                   <div class="video-container">
+                      <iframe width="640" height="360" src="https://www.youtube.com/embed/cGayeY3Lim8?rel=0" frameborder="0" allowfullscreen></iframe>
+                   </div>
+                   <div class="video-container">
+                      <iframe width="640" height="360" src="https://www.youtube.com/embed/hjDTdzQ31MQ?rel=0" frameborder="0" allowfullscreen></iframe>            
+                   </div>
                 </div>
             </div>
         </div>
@@ -182,28 +189,34 @@
                    <h3>Photo Albums</h3>
                    <div class="row">
                       <div class="col-lg-6">
-                        <p><a href="https://flic.kr/s/aHskRyn8xP" target=_blank>Jan Korinek Soultet Revue</a>
+                        <p><a href="https://flic.kr/s/aHskSRsUHU" target=_blank>with The Goodfellas at Black Coffee Blues Exchange</a>
+                        <br>Tel Aviv, Israel
+                        <br>03 Feb 2017</p>
+                        <p><a href="https://www.facebook.com/pg/SwingWingsBrno/photos/?tab=album&album_id=771250873051367" target=_blank>with The Organ Grinders at Dark Blue Swing Exchange</a>
+                        <br>Brno, CZ
+                        <br>15 Jan 2017</p>
+                        <p><a href="https://flic.kr/s/aHskRyn8xP" target=_blank>with Jan Korinek Soultet After-Xmas Revue</a>
                         <br>Prague, CZ
-                           <br>27-12-16</p>
-                        <p><a href="https://flic.kr/s/aHskShWfTx" target=_blank>Stan the Man Blues Night</a>
-                        <br>Dresden, DE
-                           <br>12-11-16</p>
-                        <p><a href="https://flic.kr/s/aHskPHhhtH" target=_blank>'Swing Out the Blues' CD Release Party</a>
+                        <br>27 Dec 2016</p>
+                         <p><a href="https://flic.kr/s/aHskQ5viRu" target=_blank>with The Organ Grinders at Prague Swing Xmas</a>
                         <br>Prague, CZ
-                           <br>14-10-16</p>
+                        <br>09 Dec 2016</p>
                       </div>
                       <div class="col-lg-6">
-                        <p><a href="https://flic.kr/s/aHskQ5viRu" target=_blank>The Organ Grinders at Prague Swing Xmas</a>
-                        <br>Prague, CZ
-                        <br>09-12-16</p>
-                      </div>
-                        <p><a href="https://flic.kr/s/aHskLDsydD" target=_blank>The Organ Grinders at Evergreen</a>
+                        <p><a href="https://flic.kr/s/aHskShWfTx" target=_blank>with Lorenzo Thompson at Stan the Man Blues Night</a>
                         <br>Dresden, DE
-                        <br>21-10-16</p>
-                        <p><a href="https://flic.kr/s/aHskLvf7nU" target=_blank>Jan Korinek Soultet Swings!</a>
+                        <br>12 Nov 2016</p>
+                        <p><a href="https://flic.kr/s/aHskLDsydD" target=_blank>with The Organ Grinders at Evergreen</a>
+                        <br>Dresden, DE
+                        <br>21 Oct 16</p>
+                        <p><a href="https://flic.kr/s/aHskPHhhtH" target=_blank>'Swing Out the Blues' CD Release Party</a>
                         <br>Prague, CZ
-                           <br>26-07-16</p>
-                   </div>
+                        <br>14 Oct 2016</p>
+                        <p><a href="https://flic.kr/s/aHskLvf7nU" target=_blank>with Jan Korinek Soultet at Jazz Dock</a>
+                        <br>Prague, CZ
+                        <br>26 July 16</p>
+                       </div>
+                    </div>
                </div>
             </div>
         </div>
