--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
                    </div>
                    </div>
                 </div>
+                <div class="row">
                 <div class="col-lg-6">
                    <div class="video-container">
                       <iframe width="640" height="360" src="https://www.youtube.com/embed/cGayeY3Lim8?rel=0" frameborder="0" allowfullscreen></iframe>
@@ -172,6 +173,7 @@
                       <iframe width="640" height="360" src="https://www.youtube.com/embed/hjDTdzQ31MQ?rel=0" frameborder="0" allowfullscreen></iframe>            
                    </div>
                 </div>
+            </div>
             </div>
         </div>
     </section>
