--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <p>Miss Mikey May is an Israeli-American blues and jazz singer. Her powerful and soulful vocals are inspired by the great jazz and blues divas and deliver a double-dose of musicality and emotion that radiate on and off the stage.</p>
                 <p>Mikey grew up on the stage, singing, acting, and dancing throughout her school years. She spent the better part of her twenties performing in rock, jazz, and blues bands, as well as cabaret and burlesque productions. In 2012 she joined the global swing and blues dance communities, traveling and dancing throughout Europe to live swing and blues music. </p>
                 <p>In early 2016 The Organ Grinders project was born from her collaboration with <a href="http://www.jankorinek.org/" target=_blank>Jan Kořínek</a>, world-class Czech Hammond organ player and band leader. In October 2016, the project released their debut album, 'Swing Out the Blues', featuring dancer-friendly swingin' blues tributes to classic tunes.</p>
-                <p>When she is not performing with The Organ Grinders, Mikey collaborates with the Ray Charles Tribute Orchestra led by <a href="http://jakubzomer.com/" target=_blank>Jakub Zomer</a> and with the dixieland jazz band <a href="http://www.appendixie.cz/en/" target=_blank>AppenDixie</a> led by Petr Seghman.</p>
+                <p>When she is not performing with The Organ Grinders, Mikey sings regularly with the Ray Charles Tribute Orchestra led by <a href="http://jakubzomer.com/" target=_blank>Jakub Zomer</a> and with the dixieland jazz band <a href="http://www.appendixie.cz/en/" target=_blank>AppenDixie</a> led by Petr Seghman. </p>
             </div>
         </div>
     </section>
