--- a/index.html
+++ b/index.html
@@ -137,13 +137,15 @@
         </div>
     </section>
 
-    <!-- Bandcamp  Section -->
+    <!-- Music  Section -->
     <section id="music" class="container-fluid widget-section text-center">
         <div class="widget-section">
             <div class="container">
                 <div class="col-xs-12 col-md-6 col-md-offset-3">
                     <h2>Music</h2>
                      <iframe style="border: 0; width: 100%; height: 472px;" src="https://bandcamp.com/EmbeddedPlayer/album=2572896376/size=large/bgcol=333333/linkcol=e99708/artwork=small/transparent=true/" seamless><a href="http://missmikeymay.bandcamp.com/album/swing-out-the-blues">Swing Out the Blues by Miss Mikey May and Jan Kořínek with The Organ Grinders</a></iframe>
+                    <br>
+                    <iframe src="https://embed.spotify.com/?uri=spotify%3Aalbum%3A2k4dHteQjVR9q5xYJnX1Qd" width="100%" height="100%" frameborder="0" allowtransparency="true"></iframe>
                 </div>
             </div>
         </div>
