--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
                     <h2>Music</h2>
                      <iframe style="border: 0; width: 100%; height: 472px;" src="https://bandcamp.com/EmbeddedPlayer/album=2572896376/size=large/bgcol=333333/linkcol=e99708/artwork=small/transparent=true/" seamless><a href="http://missmikeymay.bandcamp.com/album/swing-out-the-blues">Swing Out the Blues by Miss Mikey May and Jan Kořínek with The Organ Grinders</a></iframe>
                     <br>
-                    <iframe src="https://embed.spotify.com/?uri=spotify%3Aartist%3A36ZvEAnAbW8NOJK7TrBoh5" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>                </div>
+                    <iframe src="https://embed.spotify.com/follow/1/?uri=spotify:artist:36ZvEAnAbW8NOJK7TrBoh5&size=detail&theme=dark" width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>            
+                </div>
             </div>
         </div>
     </section>
