--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                         <p><a href="https://flic.kr/s/aHskSRsUHU" target=_blank>The Goodfellas at Black Coffee Blues Exchange</a>
                         <br>Tel Aviv, Israel
                         <br>03 Feb 2017</p>
-                        <p><a href="https://www.facebook.com/pg/SwingWingsBrno/photos/?tab=album&album_id=771250873051367" target=_blank>with The Organ Grinders at Dark Blue Swing Exchange</a>
+                        <p><a href="https://www.facebook.com/pg/SwingWingsBrno/photos/?tab=album&album_id=771250873051367" target=_blank>The Organ Grinders at Dark Blue Swing Exchange</a>
                         <br>Brno, CZ
                         <br>15 Jan 2017</p>
                         <p><a href="https://flic.kr/s/aHskRyn8xP" target=_blank>Jan Korinek Soultet After-Xmas Revue</a>
