--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
                 </div>
                 <br>
                 <div class="video-container">
-                    <iframe width="640" height="360" src="https://www.youtube.com/embed/FmL9Cf9Zbs4?rel=0" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="640" height="360" src="https://www.youtube.com/embed/gyTgksBmpt4?rel=0" frameborder="0" allowfullscreen></iframe> 
                 </div>
                 <br>
                 <div class="video-container">
-                    <iframe width="640" height="360" src="https://www.youtube.com/embed/LQBcaGpyKlI?rel=0" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="640" height="360" src="https://www.youtube.com/embed/FmL9Cf9Zbs4?rel=0" frameborder="0" allowfullscreen></iframe>
                 </div>
                 </div>
             <div class="col-lg-6">
@@ -182,7 +182,7 @@
                 </div>
                 <br>
                 <div class="video-container">
-                    <iframe width="640" height="360" src="https://www.youtube.com/embed/cGayeY3Lim8?rel=0" frameborder="0" allowfullscreen></iframe> 
+                    <iframe width="640" height="360" src="https://www.youtube.com/embed/LQBcaGpyKlI?rel=0" frameborder="0" allowfullscreen></iframe>
                 </div>
                 </div>
             </div>
