fix header image

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
     <footer>
         <div class="container text-center">
             <p>Copyright &copy; Miss Mikey May 2017</p>
-            <p>Front page photo courtesy of Ales Hrabe</p>
+            <p>Front page photo courtesy of Martina Houdek Photography</p>
             <p>...</p>
             <p>This website is open-source and published with GitHub Pages based on the awesome open-source theme from <a href="https://startbootstrap.com/template-overviews/grayscale/">Start Bootstrap Grayscale</a></p>
         </div>
