move shows in navigation

--- a/index.html
+++ b/index.html
@@ -74,9 +74,6 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#news">News</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#music">Music</a>
                     </li>
                     <li>
@@ -87,6 +84,9 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="#photos">Photos</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#shows">Shows</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -112,18 +112,6 @@
             </div>
         </div>
     </header>
-
-    <!-- News Section -->
-    <section id="news" class="container-fluid widget-section text-center">
-        <div class="widget-section">
-            <div class="container">
-                <div class="col-xs-12 col-md-8 col-md-offset-2">
-                    <h2>What's New</h2>
-                        <div class="fb-page" data-href="https://www.facebook.com/MissMikeyMaySings/" data-tabs="events" data-width="500" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/MissMikeyMaySings/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/MissMikeyMaySings/">Miss Mikey May</a></blockquote></div>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- Music  Section -->
     <section id="music" class="container-fluid widget-section text-center">
@@ -231,6 +219,18 @@
                        </div>
                     </div>
                </div> -->
+            </div>
+        </div>
+    </section>
+
+    <!-- Shows Section -->
+    <section id="shows" class="container-fluid widget-section text-center">
+        <div class="widget-section">
+            <div class="container">
+                <div class="col-xs-12 col-md-8 col-md-offset-2">
+                    <h2>Shows</h2>
+                        <div class="fb-page" data-href="https://www.facebook.com/MissMikeyMaySings/" data-tabs="events" data-width="500" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/MissMikeyMaySings/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/MissMikeyMaySings/">Miss Mikey May</a></blockquote></div>
+                </div>
             </div>
         </div>
     </section>
