--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <meta name="author" content="">
     <meta name="google-site-verification" content="q97MMbhMUlXpAK9uU3Crsb45DlJTHVZWDDzHdh-Hfk0" />
 
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
     <title>Miss Mikey May</title>
 
     <!-- Bootstrap Core CSS -->
