--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:type"           content="website" />
     <meta property="og:title"          content="Miss Mikey May" />
     <meta property="og:description"    content="Israeli-American blues and jazz singer, Mikey's powerful and soulful vocals are inspired by the great jazz and blues divas and deliver a double-dose of musicality and emotion that radiate on and off the stage." />
-    <meta property="og:image"          content="http://missmikeymay.com/img/fb-thumb.jpg" />
+    <meta property="og:image"          content="http://missmikeymay.com/img/intro-bg.jpg" />
 
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
