--- a/index.html
+++ b/index.html
@@ -164,6 +164,10 @@
                 <h2>Videos</h2>
                 <div class="row">
                 <div class="video-container">
+                    <iframe width="640" height="360" src="https://www.youtube.com/embed/95Uyw8EWVyE?rel=0" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <br>
+                <div class="video-container">
                     <iframe width="640" height="360" src="https://www.youtube.com/embed/sejtry5MuW0?rel=0" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <br>
@@ -177,10 +181,6 @@
                 <br>
                 <div class="video-container">
                     <iframe width="640" height="360" src="https://www.youtube.com/embed/szL6Ulq1XCo?rel=0" frameborder="0" allowfullscreen></iframe>
-                </div>
-                <br>
-                <div class="video-container">
-                    <iframe width="640" height="360" src="https://www.youtube.com/embed/B8lNTvw0Nko?rel=0" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
