--- a/index.html
+++ b/index.html
@@ -193,8 +193,7 @@
             <div class="col-lg-12">
                 <h2>Photos</h2>
                 <div class="flickrwrap">
-                    <iframe src="https://www.flickr.com/photos/missmikeymay/42400364722/player/" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-                </div>
+                     <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/30534245807/in/dateposted-public/" title="DSC_0521"><img src="https://farm2.staticflickr.com/1901/30534245807_1c95197506_c.jpg" width="800" height="534" alt="DSC_0521"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                </div>
                 <div class="row">
                   <!--
                    <p> <br> </p>
